v1.8 (2021-08-18)
-----------------

* Change to the license to GPL version 3
* Compatibility with Pioneer DJ "RekordBox" vinyls
* Fix a bug where decimal numbers are parsed in an unexpected way

Acknowledgements: Hugh Frater, Kilian, Yves Adler

v1.7 (2018-01-19)
-----------------

* Fix a bug that prevented dithering from being used
* Honour the system locale; allow the full character set in track names
* When searching, match characters in other locales

Acknowledgements: Stefan Berg-Johansen

v1.6 (2016-08-13)
-----------------

* Added timecode creator (for the adventurous)
* Correct interpretation of ALSA's buffer size
* Command-line flag to remove all window decorations (--no-decor)
* A dummy deck for test cases
* Internal restructing in preparation for new features
* Build without warnings on modern compilers

Acknowledgements: Daniel James, Alessio Treglia

v1.5 (2014-02-09)
-----------------

* Scan the music library in the background on startup
* Function to re-scan a crate
* Performance improovement to audio resampler
* Additional font paths
* Minor bug fixes

v1.4 (2013-06-08)
-----------------

* Scalable user interface
* Simple control of timecode levels for 'software pre-amp'
* Bug fix: MIDI interface now works when only JACK audio is used
* Dicer flag renamed to '--dicer'
* Minor fixes

Acknowledgements: Daniel Holbach

v1.3 (2012-11-29)
-----------------

* Tempo (BPM) field, and sorting and changing of sort modes
* Allow initial X window size and position to be set by the user
* Makefile modifications for packagers
* Track loading errors are reported to the main interface

Acknowledgements: Engine, Lukas Fleischer, Daniel Holbach, Matej Laitl

v1.2 (2012-03-23)
-----------------

* Scan directories only for known file extensions
* Support Novation 'Dicer' controller
* Cue points, including 'punch' feature
* Extra protection against skips: optionally lock memory into RAM
